outputs/tsp_aco-aco/2026-03-16_09-02-06/problem_iter3_response2.txt_stdout.txt
Traceback (most recent call last):
  File "D:\reevo/problems/tsp_aco/eval.py", line 20, in <module>
    import gpt
  File "D:\reevo\problems\tsp_aco\gpt.py", line 14
    """
       ^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xa6 in position 161: invalid start byte
